--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body{
+    background: linear-gradient(to right, rgb(249, 168, 212), rgb(216, 180, 254), rgb(129, 140, 248));
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+button{
+    margin: 1rem;
+    width: 150px;
+    height: 40px;
+    text-decoration: none;
+    border: 1px solid black;
+    position: relative;
+    transition: all .35s;
   }
+  
+button span{
+    position: relative;
+    z-index: 2;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+button:after{
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: #7c69e9;
+    transition: all .3s;
+}
+
+button:hover{
+    color: #fff;
+}
+
+button:hover:after{
+    width: 100%;
 }
