--- a/app/components/findreplace/findreplace.css
+++ b/app/components/findreplace/findreplace.css
@@ -78,15 +78,11 @@
 }
 
 .header-wrapper h2{
-    margin-top: 2rem;
+    margin-top: 1em;
     font-size: 1.6rem;
+    margin-bottom: 2em;
 }
 
-.header-wrapper h4{
-    margin-top: 0.6rem;
-    margin-bottom: 1rem;
-    font-size: 1.4rem;
-}
 
 textarea{
     border: 1px solid black;
