--- a/app/components/Header/Nav.css
+++ b/app/components/Header/Nav.css
@@ -46,7 +46,12 @@ li:hover{
 li:hover a{
     color: black;
 }
-
+nav button{
+    color: white;
+}
+li:hover button{
+    color: black;
+}
 .list-element-about-submenu{
     display: none;
     list-style: none;
@@ -72,7 +77,7 @@ Nav li:hover .list-element-about-submenu{
 }
 
 .edit-submenu{
-    left: 4.15em;
+    left: 4.1em;
 }
 
 .edit-submenu li{
